--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Social proof section</title>
+    <title>Responsive Design</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
